# nyaa

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  conanfile.py
.github/workflows/: build.yml
3p-patches/: allegro.patch
assets/: README.md
assets/creatures/: character.aseprite  character.json
assets/tilesets/: tiles.aseprite  tiles.json
docs/dev/: 2D space.md  Project structure.md
src/: CMakeLists.txt
src/nyaa/: Main.cpp
src/nyaa/common/: CommonState.hpp  RenderState.cpp  RenderState.hpp
src/nyaa/core/: GameManager.cpp  GameManager.hpp
src/nyaa/engine/: Controller.hpp  Preload.hpp  Screen.hpp  Window.cpp  Window.hpp
src/nyaa/engine/al/: Camera.cpp  Camera.hpp  OrthoCamera.cpp  OrthoCamera.hpp
src/nyaa/engine/aseprite/: AsepriteJSON.cpp  AsepriteJSON.hpp
src/nyaa/game/: DungeonController.cpp  DungeonController.hpp
src/nyaa/map/dungeon/: FloorGenerator.cpp  FloorGenerator.hpp
tests/: CMakeLists.txt
tests/src/meta/: AssetTests.cpp
